fix: all jobs page layout shift

--- a/src/app/sections/trabalhos/styles.module.scss
+++ b/src/app/sections/trabalhos/styles.module.scss
@@ -11,6 +11,7 @@
   align-items: center;
   padding: 2rem 0;
   gap: 2rem;
+  width: 100%;
 }
 
 .title {
